<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:weightSum="2">

    <RadioGroup
        android:id="@+id/share_qr_code_select_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/share_check_in_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="20sp"
            android:text="@string/share_check_in_code"/>
        <RadioButton
            android:id="@+id/share_event_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/share_event_page"/>
        <RadioButton
            android:id="@+id/share_poster_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/share_poster"/>
    </RadioGroup>
</LinearLayout>